@@ -2,6 +2,16 @@
 
         Reviewed by Simon.
 
+        * Initialize the WebGraphics with the one found in WebCore
+        
+
+        * Api/qwebsettings.cpp:
+        (QWebSettingsPrivate::apply):
+
+2008-04-21  Holger Hans Peter Freyther  <holger.freyther@trolltech.com>
+
+        Reviewed by Simon.
+
         * Allow TextAreas to be resized.
         * No QWebSettings for this is introduced.
         
